--- a/Student/main/templates/header.html
+++ b/Student/main/templates/header.html
@@ -1,10 +1,26 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
-	{% load staticfiles %}
+	
 
 	<title>Texas A&M University</title>
 	
-	<link rel='stylesheet' href={% static "bootstrap.css" %} />
-	<link rel='stylesheet' href={% static "main.css" %} />
+	<link rel='stylesheet' href="{% static 'bootstrap.css' %}" />
+	<link rel='stylesheet' href="{% static 'main.css' %}" />
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="{% static 'main.js' %}"></script>
+	<script type="text/javascript">
+	// $(document).ready(function() {
+	// 	$('.row').on('click', 'h3', function() {
+	// 		$(this).closest('.row').find('.slidedown').slideDown();
+	// 	});
+	// 	$('.detail').on('click', 'button', function() {
+	// 		$(this).closest('.detail'.)find('.uin').slideDown();
+	// 	});
+		 
+
+	// });
+	// alert($('p').length);
+	</script>
 </head>
