--- a/Student/main/templates/index.html
+++ b/Student/main/templates/index.html
@@ -18,8 +18,15 @@
 			<div class='col-md-4'>
 				<section>
 					<p class='person'>Name: {{person.name}} </p>
-					<p class='person'>UIN: {{person.uin}} </p>
-					<!-- <p class='person'>Year: {{person.year}} </p> -->
+					
+					<!--  -->
+          <div class='detail'>
+
+            <button>Details: </button><br>
+            <span class='uin'>UIN: {{person.uin}} </span>
+            <br>
+            <span class='uin'>Year: {{person.year}} </span>
+          </div>
 				</section>
 			</div>
 			{% endfor %}
@@ -36,29 +43,37 @@
 <br>
 
 	</div>
-
+ 
   <div class='container text-center'>
     <div class='row'>
-      <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
-        <i class='glyphicon glyphicon-briefcase '></i>
-        <h3>Join TAMU</h3>
-        <p>Texas A&M opened its doors in 1876 as the state's first public institution of higher learning. Today, we stand as a research-intensive flagship university dedicated to sending Aggie leaders out into the world prepared to take on the challenges of tomorrow.</p>
+
+      <div class='col-sm-4 col-xs-6'>
+        <div class='span'>
+          <h3><a href='#'>Join TAMU</a><h3>
+          <!-- <div class="desc"> -->
+          <p class='slidedown'>&nbsp&nbspTexas A&M opened its doors in 1876 as the state's first public institution of higher learning. Today, we stand as a research-intensive flagship university dedicated to sending Aggie leaders out into the world prepared to take on the challenges of &nbsp&nbsptomorrow.</p>
+        </div>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
-        <i class='glyphicon glyphicon-random'></i>
-        <h3>Welcome to Aggieland</h3>
-        <p>Located in the heart of the Houston-Dallas-Austin triangle, within a two-hour drive of 26 million of the state’s 28 million residents, Texas A&M's main campus in College Station is home to more than 62,500 students. Another 5,700 are at the branch campuses in Galveston and Qatar and other locations across Texas.</p>
+        <div class='span'>
+          <h3><a href='#'>Welcome to Aggieland</a><h3>
+          <p class='slidedown'>Located in the heart of the Houston-Dallas-Austin triangle, within a two-hour drive of 26 million of the state’s 28 million residents, Texas A&M's main campus in College Station is home to more than 62,500 students. Another 5,700 are at the branch campuses in Galveston and Qatar and other locations across Texas.</p>
+        </div>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
-        <i class='glyphicon glyphicon-send'></i>
-        <h3>Academic Programs</h3>
-        <p>With more than 130 undergraduate degree programs, 170 master's degree programs, 93 doctoral degree programs and 5 first professional degrees as options for study, Texas A&M is full of possibilities.</p>
+        <div class='span'>
+          <h3><a href='#'>Academic Programs</a><h3>
+          <p class='slidedown'>With more than 130 undergraduate degree programs, 170 master's degree programs, 93 doctoral degree programs and 5 first professional degrees as options for study, Texas A&M is full of possibilities.</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 <!-- 
 	 // <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <script src="bootstrap.js></script> -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="static/main.js"</script>
+
+
 {% include 'footer.html' %}
