add output function

--- a/Student/main/templates/delete.html
+++ b/Student/main/templates/delete.html
@@ -16,7 +16,7 @@
       <label for = 'year'>Year: </label>
       <input type='text' name = 'year_text' id='year'/>
 
-      <input type = 'submit' value = 'Add'>
+      <input type = 'submit' value = 'Delete'>
     </form>
   </div>
 </div>
