--- a/Student/main/templates/index.html
+++ b/Student/main/templates/index.html
@@ -33,17 +33,25 @@
 		</div>
   </div>
 
-<div class='container text-right'>
- <button type = 'button'><a href = 'add.html'>Add a student</a></button>
-</div>
-<br>
-<div class='container text-right'>
- <button type = 'button'><a href = 'del.html'>Delete a student</a></button>
+<div class='container text-center'>
+  <div class='row'>
+    <div class='col-md-4'>
+      <button type = 'button'><a href = 'add'>Add a student</a></button>
+    </div>
+    <div class='col-md-4'>
+      <button type = 'button'><a href = 'del'>Delete a student</a></button>
+    </div>
+    <div class='col-md-4'>
+      <button type = 'button'><a href = 'student_list'>Output student file</a></button>
+    </div>
+  </div>
 </div>
 <br>
 
+
+
+
 	</div>
- 
   <div class='container text-center'>
     <div class='row'>
 
